--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activities.MainMapActivity"
+            android:name=".activities.MainMapActivity"
             android:label="@string/title_activity_main_map"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
