--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,40 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pinpoint.ideamath.com.pinpoint">
 
+    <!--Permissions-->
+
+    <uses-permission android:name="com.example.googlemaps.permission.MAPS_RECEIVE" />
+
+    <uses-sdk
+        android:minSdkVersion="12"
+        android:targetSdkVersion="17" />
+    <permission
+        android:name="com.example.googlemaps.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.providers.
+      gsf.permission.
+      READ_GSERVICES" />
+
+    <uses-permission android:name="android.permission.
+      WRITE_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.
+      ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
+    <!--Google MAP API key-->
+
+    <meta-data
+        android:name="com.google.android.maps.v2.API_KEY"
+        android:value="AIzaSyCGS2E2FwFQpmhUb6xRo1T60wNCarCOCAU" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
