--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pinpoint.ideamath.com.pinpoint">
 
-    <!--Permissions-->
-
-    <uses-permission android:name="com.example.googlemaps.permission.MAPS_RECEIVE" />
-
     <uses-sdk
         android:minSdkVersion="12"
         android:targetSdkVersion="17" />
+
+    <!-- Permissions -->
+
+    <uses-permission android:name="com.example.googlemaps.permission.MAPS_RECEIVE" />
+
     <permission
         android:name="com.example.googlemaps.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
@@ -16,9 +17,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
@@ -26,8 +25,8 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
-    <!--Google MAP API key-->
-
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- Google MAP API key -->
     <application
         android:name=".PinPointApplication"
         android:allowBackup="true"
@@ -36,20 +35,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.MainMapActivity"
-            android:label="@string/title_activity_main_map"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:name=".activities.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.MainMapActivity"
+            android:label="@string/title_activity_main_map"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
